--- a/mywebpack/package.json
+++ b/mywebpack/package.json
@@ -5,13 +5,16 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "server":"webpack serve"
+    "server": "webpack serve"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^5.2.2",
     "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.4.1",
+    "style-loader": "^2.0.0",
     "webpack": "^5.33.2",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
