--- a/mywebpack/package.json
+++ b/mywebpack/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^5.2.2",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.4.1",
     "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.33.2",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
