--- a/mywebpack/package.json
+++ b/mywebpack/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.13.15",
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
@@ -25,5 +26,8 @@
     "webpack": "^5.33.2",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "jquery": "^3.6.0"
   }
 }
