--- a/vuecli/vue-cli/package.json
+++ b/vuecli/vue-cli/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "echarts": "^5.1.1",
+    "element-ui": "^2.15.1",
     "vue": "^2.6.11",
+    "vue-baidu-map": "^0.21.22",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
